--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.3.7",
     "@material-tailwind/react": "^2.1.9",
+    "animate.css": "^4.1.1",
     "antd": "^5.19.1",
     "flowbite": "^2.4.1",
     "flowbite-react": "^0.10.1",
